# PocketEngine-Termux

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  render.yaml
cmake/: FindEGL.cmake  FindOpenGLES3.cmake
editor/: CMakeLists.txt  editor.cpp  editor.h  main.cpp
editor/panels/: scene_view.h
engine/: CMakeLists.txt
engine/assets/: asset_manager.cpp  asset_manager.h
engine/core/: alloc.cpp  alloc.h  ecs.h  event.cpp  event.h  log.cpp  log.h  math.h  scene.cpp  scene.h  thread_pool.cpp  thread_pool.h  types.h
engine/db/: database.cpp  database.h
engine/platform/: window.cpp  window.h
engine/renderer/: renderer.cpp  renderer.h
engine/ui/: imgui_backend.cpp  imgui_backend.h
runtime/: CMakeLists.txt  main.cpp
scripts/termux/: fix_and_build.sh  run_editor.sh  setup_debian.sh  setup_termux.sh
server/: .env.example  package.json
server/src/: db.js  index.js
server/src/routes/: assets.js  auth.js  multiplayer.js  projects.js  scenes.js
